--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,10 @@
     transform: rotate(360deg);
   }
 }
+
+.book {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  grid-column-gap: 1 rem;
+  margin: 2rem 0;
+}
